--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,9 @@
             <groupId>org.apache.shiro</groupId>
             <artifactId>shiro-spring</artifactId>
             <version>1.3.0</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
+
 
     </dependencies>
 
