--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,27 +1,33 @@
 spring:
-    datasource:
-      url: jdbc:mysql://119.23.236.26:3306/shiro
-      username: honey
-      password: Honey521.
-      #schema: database/import.sql
-      #sql-script-encoding: utf-8
-      #driver-class-name: com.mysql.jdbc.Driver
+  datasource:
+    url: jdbc:mysql://119.23.236.26:3306/shiro
+    username: honey
+    password: Honey521.
+    #schema: database/import.sql
+    #sql-script-encoding: utf-8
+    #driver-class-name: com.mysql.jdbc.Driver
 
-    jpa:
-      database: mysql
-      show-sql: true
-      hibernate:
-        ddl-auto: update
-        naming:
-          physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      properties:
-         hibernate:
-            dialect: org.hibernate.dialect.MySQL5Dialect
+  jpa:
+    database: mysql
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties:
+       hibernate:
+          dialect: org.hibernate.dialect.MySQL5Dialect
 
 
-    thymeleaf:
-       cache: false
-       encoding: UTF-8
-       prefix: classpath:/templates/
-       suffix: .html
-       mode: LEGACYHTML5
+  thymeleaf:
+     cache: false
+     encoding: UTF-8
+     prefix: classpath:/templates/
+     suffix: .html
+     mode: LEGACYHTML5
+
+logging:
+  level:
+    root: debug
+
+
